# omnicache-ai

./: .gitignore  CHANGELOG.md  CLAUDE.md  COOKBOOK.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
conda-recipe/: meta.yaml
cookbook/: README.md  run_all.py
cookbook/a2a/: README.md  agent.py
cookbook/agno/: README.md  agent.py
cookbook/autogen/: README.md  agent.py
cookbook/core/: README.md  agent.py
cookbook/crewai/: README.md  agent.py
cookbook/invalidation/: agent.py
cookbook/langchain/: README.md  agent.py
cookbook/langgraph/: README.md  agent.py
cookbook/multi_framework/: README.md  agent.py
cookbook/redis/: agent.py
cookbook/semantic_cache/: agent.py
cookbook/ttl/: agent.py
docs/: index.md
docs/adapters/: a2a.md  agno.md  autogen.md  crewai.md  index.md  langchain.md  langgraph.md
docs/api-reference/: index.md
docs/backends/: chroma.md  disk.md  faiss.md  index.md  memory.md  redis.md
docs/cookbook/: a2a.md  agno.md  autogen.md  core.md  crewai.md  index.md  invalidation.md  langchain.md  langgraph.md  multi-framework.md  redis.md  runnable-examples.md  semantic-cache.md  ttl.md
docs/core/: cache-manager.md  index.md  invalidation.md  key-builder.md  policies.md  settings.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/layers/: context.md  embedding.md  index.md  response.md  retrieval.md  semantic.md
docs/middleware/: embedding.md  index.md  llm.md  retriever.md
docs/stylesheets/: extra.css
omnicache_ai/: __init__.py  __main__.py
omnicache_ai/adapters/: a2a_adapter.py  agno_adapter.py  autogen_adapter.py  crewai_adapter.py  langchain_adapter.py  langgraph_adapter.py
omnicache_ai/backends/: base.py  disk_backend.py  memory_backend.py  redis_backend.py  vector_backend.py
omnicache_ai/config/: __init__.py  settings.py
omnicache_ai/core/: cache_manager.py  invalidation.py  key_builder.py  policies.py
omnicache_ai/layers/: context_cache.py  embedding_cache.py  response_cache.py  retrieval_cache.py  semantic_cache.py
omnicache_ai/middleware/: embedding_middleware.py  llm_middleware.py  retriever_middleware.py
tests/: conftest.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tailwind.config.js
(+62 files in other folders)
