[project]
name = "omnicache-ai"
version = "0.1.0"
description = "Unified caching layer for AI/agent frameworks"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
authors = [
    { name = "omnicache-ai contributors" },
]
keywords = [
    "cache", "caching", "llm", "ai", "agent", "langchain", "langgraph",
    "autogen", "crewai", "agno", "a2a", "semantic-cache", "embeddings",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "diskcache>=5.6",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/ashishpatel26/omnicache-ai"
Documentation = "https://github.com/ashishpatel26/omnicache-ai#readme"
Repository = "https://github.com/ashishpatel26/omnicache-ai"
Issues = "https://github.com/ashishpatel26/omnicache-ai/issues"
Changelog = "https://github.com/ashishpatel26/omnicache-ai/blob/main/CHANGELOG.md"

[project.optional-dependencies]
redis = ["redis>=5.0"]
vector-faiss = ["faiss-cpu>=1.7", "numpy>=1.26"]
vector-chroma = ["chromadb>=0.4"]
langchain = ["langchain-core>=0.2"]
langgraph = ["langgraph>=0.1", "langchain-core>=0.2"]
autogen = ["pyautogen>=0.2"]
crewai = ["crewai>=0.28"]
agno = ["agno>=0.1"]
all = ["omnicache-ai[redis,vector-faiss,langchain,langgraph,autogen,crewai,agno]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
omnicache = "omnicache_ai.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omnicache_ai"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
